// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group Hero Container should not render leave group when you are the leader 1`] = `
<div
  className="GroupContainer sidebar-card flex flex-column"
>
  <div
    className="sidebar-title"
  >
    Your Group
  </div>
  <div>
    <div
      className="GroupHeroCard flex align-center"
    >
      <div
        className="numberBox flex align-center sidebar-title numbers"
      >
        1
      </div>
      <div
        className="countdownTimer"
      >
        <img
          alt="undefined icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
        <div
          className="overlay"
        >
          <div
            className="countdown-container flex align-center justify-center"
            onClick={undefined}
          >
            <div>
              30
            </div>
          </div>
        </div>
      </div>
      <div
        className="imageStylePadding"
      >
        <div
          className="flex justify-between"
        >
          You - Leader
        </div>
        <div
          className="inLine1"
        >
          <div />
        </div>
      </div>
    </div>
    <div>
      <div
        className="GroupHeroCard flex align-center"
      >
        <div
          className="numberBox flex align-center sidebar-title numbers"
        >
          2
        </div>
        <div
          className="countdownTimer"
        >
          <img
            alt="undefined icon"
            className="HeroImage"
            onClick={undefined}
            src={
              Object {
                "process": [Function],
              }
            }
          />
          <div
            className="overlay"
          >
            <div
              className="countdown-container flex align-center justify-center"
              onClick={undefined}
            >
              <div>
                30
              </div>
            </div>
          </div>
        </div>
      </div>
      <br />
      <button
        className="button-four flex align-center justify-center"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          Team Stats
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Group Hero Container should render a group leader as first member 1`] = `
<div
  className="GroupContainer sidebar-card flex flex-column"
>
  <div
    className="sidebar-title"
  >
    Your Group
  </div>
  <div>
    <div
      className="GroupHeroCard flex align-center"
    >
      <div
        className="numberBox flex align-center sidebar-title numbers"
      >
        1
      </div>
      <div
        className="countdownTimer"
      >
        <img
          alt="undefined icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
        <div
          className="overlay"
        >
          <div
            className="countdown-container flex align-center justify-center"
            onClick={undefined}
          >
            <div>
              30
            </div>
          </div>
        </div>
      </div>
      <div
        className="imageStylePadding"
      >
        <div
          className="flex justify-between"
        >
          luckbomb#1234 - Leader
        </div>
        <div
          className="inLine1"
        >
          <div />
        </div>
      </div>
    </div>
    <div>
      <br />
      <button
        className="button-four flex align-center justify-center"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          Team Stats
        </div>
      </button>
    </div>
    <br />
    <div
      className="flex justify-center"
    >
      <i
        className="leaveText"
        onClick={[Function]}
      >
        leave group
      </i>
    </div>
  </div>
</div>
`;

exports[`Group Hero Container should render four pending members plus you and the leader 1`] = `
<div
  className="GroupContainer sidebar-card flex flex-column"
>
  <div
    className="sidebar-title"
  >
    Your Group
  </div>
  <div>
    <div
      className="GroupHeroCard flex align-center"
    >
      <div
        className="numberBox flex align-center sidebar-title numbers"
      >
        1
      </div>
      <div
        className="countdownTimer"
      >
        <img
          alt="undefined icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
        <div
          className="overlay"
        >
          <div
            className="countdown-container flex align-center justify-center"
            onClick={undefined}
          >
            <div>
              30
            </div>
          </div>
        </div>
      </div>
      <div
        className="imageStylePadding"
      >
        <div
          className="flex justify-between"
        >
          luckbomb#1234 - Leader
        </div>
        <div
          className="inLine1"
        >
          <div />
        </div>
      </div>
    </div>
    <div>
      <br />
      <button
        className="button-four flex align-center justify-center"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          Team Stats
        </div>
      </button>
    </div>
    <br />
    <div
      className="flex justify-center"
    >
      <i
        className="leaveText"
        onClick={[Function]}
      >
        leave group
      </i>
    </div>
  </div>
</div>
`;
